# groom

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  QUICKSTART.md  README.md  TODO.md  justfile
.githooks/: pre-push
.github/workflows/: release.yml
examples/hello-world/: Cargo.toml  justfile
examples/hello-world/src/: main.rs
examples/htmx/: Cargo.toml  justfile
examples/htmx/src/: controller.rs  lib.rs  state.rs  template.rs
examples/htmx/src/tests/: controller.rs  mod.rs  test_utils.rs
examples/htmx/templates/: error.jinja  message_block.jinja  page.jinja
examples/quick-example/: Cargo.toml  README.md  justfile
examples/quick-example/src/: lib.rs  main.rs  quickstart_snippet.rs
examples/todo/: justfile  spec.yaml
examples/todo/backend/: Cargo.toml
examples/todo/backend/src/: bootstrap.rs  lib.rs  main.rs  server.rs  static_assets.rs
examples/todo/backend/src/controller/: mod.rs  todos.rs
examples/todo/backend/src/controller/todos/: model.rs
examples/todo/backend/src/repository/: mod.rs  tasks_repository.rs
examples/todo/backend/src/repository/tasks_repository/: mod.rs  tests.rs
examples/todo/backend/src/service/: error.rs  mod.rs  model.rs  repository.rs  task_service.rs
examples/todo/backend/src/service/port/: repository.rs
examples/todo/backend/src/service/task_service/: mod.rs  tests.rs
examples/todo/backend/src/tests/: integration.rs
examples/todo/frontend/: .env.example  .gitignore  README.md  openapi-ts.config.ts  orval.config.js  orval.config.ts  package-lock.json  package.json  tsconfig.node.json
examples/todo/frontend/src/: App.vue  main.ts
examples/todo/frontend/src/api/: index.ts  mutator.ts  sdk.gen.ts  todo.ts  types.gen.ts
examples/todo/frontend/src/assets/: base.css  main.css
examples/todo/frontend/src/components/: ErrorBar.vue  FiltersBar.vue  HeaderBar.vue  IconButton.vue  InlineEditor.vue  MainMenu.vue  TaskStatusIcon.vue  TodoItem.vue
examples/todo/frontend/src/components/icons/: IconAdd.vue  IconCancel.vue  IconDone.vue  IconFloppyDisk.vue  IconPencil.vue  IconPending.vue  IconTaskChecklist.vue
examples/todo/frontend/src/router/: index.ts
examples/todo/frontend/src/services/: axios.ts
examples/todo/frontend/src/views/: TasksView.vue
groom/: ARCHITECTURE.md  Cargo.toml  README.md
groom/src/: content_negotiation.rs  json_ptr.rs  lib.rs  runtime_checks.rs  schema.rs
groom/src/extract/: components_registry.rs  mod.rs  parameters.rs  path.rs  query.rs  std_types.rs
groom/src/response/: html_response.rs  mod.rs  result.rs
groom_macros/: ARCHITECTURE.md  Cargo.toml  README.md
groom_macros/src/: annotation_attrs.rs  comments.rs  controller.rs  dto.rs  http.rs  lib.rs  request_body.rs  response.rs  utils.rs
groom_macros/tests/: tests.rs
groom_macros/tests/expand/: 00-simple-rest.expanded.rs  00-simple-rest.rs  01-response.expanded.rs  01-response.rs  01-simple-rest.expanded.rs  01-simple-rest.rs
groom_tests/: Cargo.toml
groom_tests/tests/: scratchpad.rs  tests.rs
groom_tests/tests/features/: dependency_injection.rs  mod.rs  multiple_controllers.rs  request_axum_request_extractor.rs  request_body.rs  request_headers.rs  request_methods.rs  request_path_params.rs  request_query_params.rs  response_content_negotiation.rs  response_struct.rs  response_type_html.rs  response_type_json.rs  response_type_plaintext.rs  response_type_result.rs  value_objects.rs
groom_tests/tests/integration/: mod.rs  simple_api.rs  test_utils.rs
groom_tests/tests/integration/features/: content_negotiation.rs  dependency_injection.rs  mod.rs  multiple_controllers.rs  request_axum_request_extractor.rs  request_body.rs  request_headers.rs  request_methods.rs  request_path_params.rs  request_query_params.rs  response_content_negotiation.rs  response_struct.rs  response_type_html.rs  response_type_json.rs  response_type_plaintext.rs  value_objects.rs
humars/: Cargo.toml
humars-macros/: Cargo.toml
humars-macros/src/: attrs.rs  controller.rs  dto.rs  http.rs  lib.rs  request_body.rs  response.rs  utils.rs
humars-macros/tests/: tests.rs
humars-macros/tests/expand/: 01-simple-rest.expanded.rs  01-simple-rest.rs
humars-tests/: Cargo.toml
humars-tests/tests/: tests.rs
humars-tests/tests/integration/: simple_api.rs
humars/src/: content_negotiation.rs  lib.rs
humars/src/extract/: mod.rs  path.rs  query.rs  std_types.rs
humars/src/response/: dto.rs  html_response.rs  mod.rs
scripts/: verify-quickstart-example.sh
