[workspace]
resolver = "3"
members = [
    "groom",
    "groom_macros",
    "groom_tests",

    "examples/hello-world",
    "examples/todo/backend"
]

[workspace.package]
authors = ["root-talis <root.talis@gmail.com>"]
edition = "2024"
rust-version = "1.95"
homepage = "https://github.com/root-talis/groom"
repository = "https://github.com/root-talis/groom"
documentation = "https://github.com/root-talis/groom"
license = "MIT OR Apache-2.0"
