[package]
name = "groom"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A thin wrapper around actix for making code-first strictly-typed HTTP APIs."
keywords = ["http", "async", "openapi", "swagger", "actix"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming::http-server",
]

[lints.rust]
unsafe_code = "forbid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accept-header = "0.2.3"
async-trait = "0.1.77"
axum = "0.7.2"
derive_more = { version = "0.99.17", default-features = false, features = ["as_ref", "deref"] }
http = "1.0.0"
mime = "0.3.17"
serde = { version = "1.0.195", default-features = false }
utoipa = "4.2.0"
