[package]
name = "groom"
version = "0.2.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A thin wrapper around axum for making code-first strictly-typed HTTP APIs."
keywords = ["http", "async", "openapi", "swagger", "axum"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming::http-server",
]

[features]
axum-extra-query = ["dep:axum-extra", "axum-extra?/query"]
axum-extra-form  = ["dep:axum-extra", "axum-extra?/form"]

[lints.rust]
unsafe_code = "forbid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accept-header = "0.2.3"
async-trait = "0.1.77"
axum = "0.8.9"
axum-extra = { version = "0.12.6", optional = true, features = ["query", "form"] }
derive_more = { version = "2.1.1", default-features = false, features = ["as_ref", "deref"] }
http = "1.0.0"
mime = "0.3.17"
serde = { version = "1.0.195", default-features = false }
utoipa = "5.4.0"

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "1.4.1"
utoipa = { version = "5.4.0", features = ["debug"] }

[profile.dev]
opt-level = 0
debug = true
