[package]
name = "groom_tests"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accept-header = "0.2.3"
async-trait = "0.1.80"
axum = { version = "0.7.2", features = ["macros"] }
bytes = "1.5.0"
http-body-util = "0.1.0"
groom = {path = "../groom" }
groom_macros = {path = "../groom_macros" }
mime = "0.3.17"
serde = { version = "1.0.195", features = ["derive"] }
static_assertions = "1.1.0"
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
serde_json = "1.0.115"
tower = { version = "0.4.13", features = ["util"] }
utoipa = "4.2.0"
