[package]
name = "humars_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
axum = { version = "0.7.4", default-features = false }
darling = "0.20.3"
indexmap = "2.1.0"
mime = "0.3.17"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.70"
#proc-macro-crate = "2.0.1"
quote = "1.0.33"
serde = { version = "1.0.195", features = ["derive"] }
static_assertions = "1.1.0"
strum = { version = "0.25.0", features = ["strum_macros"] }
strum_macros = "0.25.3"
syn = { version = "2.0.41", features = ["full"] }
thiserror = "1.0.51"

[dev-dependencies]
macrotest = "1.0.9"
mime = "0.3.17"
serde = { version = "1.0.195", features = ["derive"] }
