[package]
name = "humars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accept-header = "0.2.3"
async-trait = "0.1.77"
axum = "0.7.2"
derive_more = { version = "0.99.17", default-features = false, features = ["as_ref", "deref"] }
http = "1.0.0"
serde = { version = "1.0.195", default-features = false }
utoipa = "4.2.0"
