[package]
name = "groom-example_htmx"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lib]
name = "groom_example_htmx"
path = "src/lib.rs"

[[bin]]
name = "htmx"

[dependencies]
accept-header = "0.2.3"
axum = "0.8.9"
color-eyre = "0.6.5"
groom = { path = "../../groom" }
groom_macros = { path = "../../groom_macros" }
mime = "0.3.17"
minijinja = { version = "2.12.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
static_assertions = "1.1.0"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.14"
tracing-subscriber = { version = "0.3.23" }
utoipa = { version = "5.4.0", features = ["yaml"] }

[dev-dependencies]
http-body-util = "0.1.0"
tower = { version = "0.5.3", features = ["util"] }
